--- a/02.md
+++ b/02.md
@@ -15,7 +15,9 @@ logIt();
 
 ####Write a regular expression  to reverse the first and last name
 ```regex
-
+const name = "Ankit Ranjan";
+const reverseName = name.replace(/^(\w+)\s(\w+)$/, "$2 $1");
+console.log(reverseName);
 ```
 
 
